--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,87 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.header {
+  position: fixed;
+  height: 60vh;
+  cursor: pointer;
+  width: 100%;
+  display: flex;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #90836a;
+  padding: 0;
+  margin: 0;
+  height: 600vh;
+  width: 100vh;
+  color: #000;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-family:  var(--kalnia-font);
+  text-align: center;
+  font-size: 8vw;
+  font-weight: lighter;
+}
+
+.slider-section {
+  height: 22vh;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+}
+
+.wheel{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300vw;
+  height: 300vw;
+  max-width: 2000px;
+  max-height: 2000px;
+}
+
+.wheel__card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 6%;
+  max-width: 200px;
+  aspect-ratio: 1/1;
+  cursor: pointer;
+
+}
+
+img{
+  width: 100%;
+  pointer-events: none;
+  z-index: 999;
+  cursor: pointer;
+}
+
+.scroll-down-icon {
+  position: fixed;
+  top: 4em;
+  right: 2em;
+}
+
+.scroll-down-icon img{
+  width: 50px;
+}
+
+.scroll-down {
+
+  position: fixed;
+  top: 3em;
+  left: 2em;
+  color: #000;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 20px;
+  overflow: visible;
 }
